--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "meteor-up-docs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.2"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
-  }
+    "name": "meteor-up-docs",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack --port 3003",
+        "build": "next build --turbopack",
+        "start": "next start",
+        "lint": "eslint",
+        "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind"
+    },
+    "dependencies": {
+        "next": "15.5.2",
+        "nextra": "^4.4.0",
+        "nextra-theme-docs": "^4.4.0",
+        "react": "19.1.0",
+        "react-dom": "19.1.0"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.5.2",
+        "pagefind": "^1.4.0",
+        "tailwindcss": "^4",
+        "typescript": "^5"
+    }
 }
