--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-    "name": "meteor-up-docs",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev --port 3003",
-        "build": "next build",
-        "start": "next start",
-        "lint": "eslint",
-        "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind"
-    },
-    "dependencies": {
-        "next": "16.0.10",
-        "nextra": "^4.6.1",
-        "nextra-theme-docs": "^4.6.1",
-        "react": "19.2.3",
-        "react-dom": "19.2.3"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3.3.3",
-        "@tailwindcss/postcss": "^4.1.18",
-        "@types/node": "^25.0.2",
-        "@types/react": "^19.2.7",
-        "@types/react-dom": "^19.2.3",
-        "eslint": "^9.39.2",
-        "eslint-config-next": "16.0.10",
-        "pagefind": "^1.4.0",
-        "tailwindcss": "^4.1.18",
-        "typescript": "^5.9.3"
-    }
+  "name": "meteor-up-docs",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --port 3003",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint",
+    "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind"
+  },
+  "dependencies": {
+    "next": "^16.1.6",
+    "nextra": "^4.6.1",
+    "nextra-theme-docs": "^4.6.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^25.0.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.0.10",
+    "pagefind": "^1.4.0",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
+  }
 }
